# e-ovrt_control-plane

./: .gitignore  README.md  pyproject.toml
configs/: replay_dbe_cr01_cr02.yaml  replay_simulated_cr01_cr02_temporal.yaml
configs/patterns/: cr01_cr02_temporal_eval.yaml  cr01_cr02_v1.yaml
docs/: architecture.md  contracts.md  progress.md
docs/decisions/: ADR-0001-repo-scope.md  ADR-0002-python-first.md  ADR-0003-jsonl-event-store.md  ADR-0004-dbe-replay-first.md
fixtures/simulated_media/cr01_cr02_temporal/: README.md  detections.jsonl  ground_truth.json
scripts/: generate_temporal_eval_fixture.py
src/eovrt_control/: __init__.py  cli.py  config.py
src/eovrt_control/contracts/: __init__.py  alerts.py  errors.py  media.py  metrics.py  pattern.py
src/eovrt_control/engine/: __init__.py  pattern_engine.py
src/eovrt_control/engine/evaluators/: __init__.py  spatial_absence.py
src/eovrt_control/evaluation/: __init__.py  temporal.py
src/eovrt_control/runtime/: __init__.py  replay.py
src/eovrt_control/sinks/: __init__.py  artifacts.py  jsonl.py
src/eovrt_control/sources/: __init__.py  media_jsonl.py
tests/: test_config.py  test_pattern_engine.py  test_replay.py  test_spatial_absence.py  test_temporal_evaluation.py
